# vulkan

./: README.md  cabal.project
.circleci/: config.yml
genvulkan/: README.md  genvulkan.cabal  vulkan-raw.template
genvulkan/app/: Main.hs
genvulkan/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
genvulkan/dist-newstyle/packagedb/ghc-9.4.3/: genvulkan-0.1.0.0-inplace.conf  package.cache
genvulkan/src/: Autogen.hs
genvulkan/src/Autogen/: Cabal.hs  Distillery.hs  Mixer.hs  Packager.hs  Parser.hs
genvulkan/src/Autogen/Cabal/: Types.hs
genvulkan/src/Autogen/Distillery/: Class.hs  Condenser.hs  Types.hs
genvulkan/src/Autogen/Mixer/: Types.hs
genvulkan/src/Autogen/Packager/: Types.hs
genvulkan/src/Autogen/Parser/: Types.hs
genvulkan/src/Text/XML/: Parser.hs
tiny/: cabal.project  tiny.cabal
tiny/app/: Main.hs
tiny/src/: Tiny.hsc
vk-mem-alloc/: README.md  vk-mem-alloc.cabal
vk-mem-alloc/src/: VkMemAlloc.hsc
vulkan-example/: LICENSE  README.md  cabal.project  vulkan-example.cabal
vulkan-example/app/: Main.hs
vulkan-example/src/: Example.hs
vulkan-example/src/Example/: Extensions.hs  Shaders.hs
vulkan-raw/: README.md  cabal.project  vulkan-raw.cabal
vulkan-raw/src-gen/Vulkan/: Core_1_0.hsc  Core_1_1.hsc  Core_1_2.hsc  Core_1_3.hsc
vulkan-raw/src-gen/Vulkan/Ext/: VK_AMD_buffer_marker.hsc  VK_AMD_device_coherent_memory.hsc  VK_AMD_display_native_hdr.hsc  VK_AMD_draw_indirect_count.hsc  VK_AMD_gcn_shader.hsc  VK_AMD_gpu_shader_half_float.hsc  VK_AMD_gpu_shader_int16.hsc  VK_AMD_memory_overallocation_behavior.hsc  VK_AMD_mixed_attachment_samples.hsc  VK_AMD_negative_viewport_height.hsc  VK_AMD_pipeline_compiler_control.hsc  VK_AMD_rasterization_order.hsc  VK_AMD_shader_ballot.hsc  VK_AMD_shader_core_properties.hsc  VK_AMD_shader_core_properties2.hsc  VK_AMD_shader_early_and_late_fragment_tests.hsc  VK_AMD_shader_explicit_vertex_parameter.hsc  VK_AMD_shader_fragment_mask.hsc  VK_AMD_shader_image_load_store_lod.hsc  VK_AMD_shader_info.hsc  VK_AMD_shader_trinary_minmax.hsc  VK_AMD_texture_gather_bias_lod.hsc  VK_ANDROID_external_memory_android_hardware_buffer.hsc  VK_ARM_rasterization_order_attachment_access.hsc  VK_ARM_shader_core_builtins.hsc  VK_EXT_4444_formats.hsc  VK_EXT_acquire_drm_display.hsc  VK_EXT_acquire_xlib_display.hsc  VK_EXT_astc_decode_mode.hsc  VK_EXT_attachment_feedback_loop_layout.hsc  VK_EXT_blend_operation_advanced.hsc  VK_EXT_border_color_swizzle.hsc  VK_EXT_buffer_device_address.hsc  VK_EXT_calibrated_timestamps.hsc  VK_EXT_color_write_enable.hsc  VK_EXT_conditional_rendering.hsc  VK_EXT_conservative_rasterization.hsc  VK_EXT_custom_border_color.hsc  VK_EXT_debug_marker.hsc  VK_EXT_debug_report.hsc  (+276 more)
vulkan-raw/src-gen/Vulkan/Types/: Base.hsc  Constant.hsc  Define.hsc  FuncPointer.hsc  Handle.hsc  Protected.hs
vulkan-raw/src-gen/Vulkan/Types/Command/: VkAcquireDrmDisplayEXT.hsc  VkAcquireFullScreenExclusiveModeEXT.hsc  VkAcquireNextImage2KHR.hsc  VkAcquireNextImageKHR.hsc  VkAcquirePerformanceConfigurationINTEL.hsc  VkAcquireProfilingLockKHR.hsc  VkAcquireWinrtDisplayNV.hsc  VkAcquireXlibDisplayEXT.hsc  VkAllocateCommandBuffers.hsc  VkAllocateDescriptorSets.hsc  VkAllocateMemory.hsc  VkBeginCommandBuffer.hsc  VkBindAccelerationStructureMemoryNV.hsc  VkBindBufferMemory.hsc  VkBindBufferMemory2.hsc  VkBindBufferMemory2KHR.hsc  VkBindImageMemory.hsc  VkBindImageMemory2.hsc  VkBindImageMemory2KHR.hsc  VkBindOpticalFlowSessionImageNV.hsc  VkBindVideoSessionMemoryKHR.hsc  VkBuildAccelerationStructuresKHR.hsc  VkBuildMicromapsEXT.hsc  VkCmdBeginConditionalRenderingEXT.hsc  VkCmdBeginDebugUtilsLabelEXT.hsc  VkCmdBeginQuery.hsc  VkCmdBeginQueryIndexedEXT.hsc  VkCmdBeginRenderPass.hsc  VkCmdBeginRenderPass2.hsc  VkCmdBeginRenderPass2KHR.hsc  VkCmdBeginRendering.hsc  VkCmdBeginRenderingKHR.hsc  VkCmdBeginTransformFeedbackEXT.hsc  VkCmdBeginVideoCodingKHR.hsc  VkCmdBindDescriptorBufferEmbeddedSamplersEXT.hsc  VkCmdBindDescriptorBuffersEXT.hsc  VkCmdBindDescriptorSets.hsc  VkCmdBindIndexBuffer.hsc  VkCmdBindInvocationMaskHUAWEI.hsc  VkCmdBindPipeline.hsc  (+585 more)
vulkan-raw/src-gen/Vulkan/Types/Enum/: VkAccelerationStructureBuildTypeKHR.hsc  VkAccelerationStructureCompatibilityKHR.hsc  VkAccelerationStructureCreateFlagBitsKHR.hsc  VkAccelerationStructureCreateFlagsKHR.hsc  VkAccelerationStructureMemoryRequirementsTypeNV.hsc  VkAccelerationStructureMotionInfoFlagsNV.hsc  VkAccelerationStructureMotionInstanceFlagsNV.hsc  VkAccelerationStructureMotionInstanceTypeNV.hsc  VkAccelerationStructureTypeKHR.hsc  VkAccelerationStructureTypeNV.hsc  VkAccessFlagBits.hsc  VkAccessFlagBits2.hsc  VkAccessFlagBits2KHR.hsc  VkAccessFlags.hsc  VkAccessFlags2.hsc  VkAccessFlags2KHR.hsc  VkAcquireProfilingLockFlagBitsKHR.hsc  VkAcquireProfilingLockFlagsKHR.hsc  VkAndroidSurfaceCreateFlagsKHR.hsc  VkAttachmentDescriptionFlagBits.hsc  VkAttachmentDescriptionFlags.hsc  VkAttachmentLoadOp.hsc  VkAttachmentStoreOp.hsc  VkBlendFactor.hsc  VkBlendOp.hsc  VkBlendOverlapEXT.hsc  VkBorderColor.hsc  VkBufferCreateFlagBits.hsc  VkBufferCreateFlags.hsc  VkBufferUsageFlagBits.hsc  VkBufferUsageFlags.hsc  VkBufferViewCreateFlags.hsc  VkBuildAccelerationStructureFlagBitsKHR.hsc  VkBuildAccelerationStructureFlagBitsNV.hsc  VkBuildAccelerationStructureFlagsKHR.hsc  VkBuildAccelerationStructureFlagsNV.hsc  VkBuildAccelerationStructureModeKHR.hsc  VkBuildMicromapFlagBitsEXT.hsc  VkBuildMicromapFlagsEXT.hsc  VkBuildMicromapModeEXT.hsc  (+445 more)
vulkan-raw/src-gen/Vulkan/Types/FuncPointer/: PFN_vkAllocationFunction.hsc  PFN_vkDebugReportCallbackEXT.hsc  PFN_vkDebugUtilsMessengerCallbackEXT.hsc  PFN_vkDeviceMemoryReportCallbackEXT.hsc  PFN_vkFreeFunction.hsc  PFN_vkGetInstanceProcAddrLUNARG.hsc  PFN_vkInternalAllocationNotification.hsc  PFN_vkInternalFreeNotification.hsc  PFN_vkReallocationFunction.hsc  PFN_vkVoidFunction.hsc
vulkan-raw/src-gen/Vulkan/Types/Struct/: VkAabbPositionsKHR.hsc  VkAabbPositionsNV.hsc  VkAccelerationStructureBuildGeometryInfoKHR.hsc  VkAllocationCallbacks.hsc  (+1056 more)
vulkan-raw/src/Vulkan/Types/: VkFun.hs
(+12 files in other folders)
