cabal-version:       2.2

name:                genvulkan
version:             0.1.0.0
synopsis:            Vulkan API generator
description:         Vulkan API generator for vulkan-raw package
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oleksii Divak
maintainer:          frozenwitness@gmail.com
copyright:           (c) 2023 Oleksii Divak
category:            Graphics
build-type:          Simple

library
  hs-source-dirs:      src

  exposed-modules:     Autogen

  other-modules:       Autogen.Cabal
                       Autogen.Cabal.Types

                       Autogen.Distillery
                       Autogen.Distillery.Class
                       Autogen.Distillery.Condenser
                       Autogen.Distillery.Types

                       Autogen.Mixer
                       Autogen.Mixer.Types

                       Autogen.Packager
                       Autogen.Packager.Types

                       Autogen.Parser
                       Autogen.Parser.Types

                       Text.XML.Parser

                       Paths_genvulkan

  autogen-modules:     Paths_genvulkan

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , HaXml
                     , text

  default-language:    Haskell2010

  ghc-options:         -Wall

executable genvulkan
  hs-source-dirs:      app

  main-is:             Main.hs

  ghc-options:         -Wall

  build-depends:       base
                     , genvulkan

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/burningwitness/vulkan
  subdir:   genvulkan
