cabal-version:       2.2

name:                tiny
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src

  exposed-modules:     Tiny

  build-depends:       base >= 4.7 && < 5

  default-language:    Haskell2010

  ghc-options:         -Wall

  if os (windows)
    extra-libraries:   vulkan-1
  else
    extra-libraries:   vulkan

executable tiny
  hs-source-dirs:      app

  main-is:             Main.hs

  ghc-options:         -Wall

  build-depends:       base
                     , tiny

  default-language:    Haskell2010
